--- a/public/css/tabs.css
+++ b/public/css/tabs.css
@@ -26,7 +26,8 @@
             padding:9px 15px;
             display:inline-block;
             border-radius:3px 3px 0px 0px;
-            background:#7FB5DA;
+            background:#eeeeee;
+
             font-size:16px;
             font-weight:600;
             color:#4c4c4c;
@@ -34,13 +35,13 @@
         }
  
         .tab-links a:hover {
-            background:#a7cce5;
+            background:#dddddd;
             text-decoration:none;
         }
  
     li.active a, li.active a:hover {
-        background:#4D90FE;
-        color:#ffffff;
+        background:#cccccc;
+        color:#000000;
     }
  
     /*----- Content of Tabs -----*/
@@ -48,7 +49,7 @@
         padding:15px;
         border-radius:3px;
         box-shadow:-1px 1px 1px rgba(0,0,0,0.15);
-        background:#fff;
+        background:#ffffff;
 		height: 570px;
     }
  
