--- a/public/css/tabs.css
+++ b/public/css/tabs.css
@@ -26,7 +26,7 @@
             padding:9px 15px;
             display:inline-block;
             border-radius:3px 3px 0px 0px;
-            background:#eeeeee;
+            background:#cccccc;
 
             font-size:16px;
             font-weight:600;
@@ -40,7 +40,7 @@
         }
  
     li.active a, li.active a:hover {
-        background:#cccccc;
+        background:#ffffff;
         color:#000000;
     }
  
